hphp/hack/test/typecheck/is_expression/is_vector_access.php.exp
File "is_vector_access.php", line 7, characters 10-16:
This is not an object of type KeyedContainer, this is a value of generic type Tv#2 (Typing[4005])
File "rx/interfaces.hhi", line 26, characters 49-50:
Definition is here
